--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -15,4 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true" />
 
+    <StackView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/stackView" />
+
 </RelativeLayout>
